--- a/level3/index.html
+++ b/level3/index.html
@@ -14,6 +14,8 @@
 </body>
 
 <!-- Do not change this-->
+<img src="images/orb.png" alt="orb" id="orb">
+
 <script type="text/javascript" src="GameObject.js"></script>
 <script type="text/javascript" src="controls.js"></script>
 <script type="text/javascript" src="game.js"></script>
