--- a/Level4_Boss/index.html
+++ b/Level4_Boss/index.html
@@ -10,8 +10,11 @@
 <body>
 	<canvas id="canvas" width = "1000" height ="800" >
     	Your browser is outdated and does not support HTML5. Please update to the latest version.
+		
     </canvas>
 </body>
+<h1>Controls</h1>
+		<h2>"space" = Launch Ball , "f" = explode , "r" = reset ball</h2>
 <!--Controls-->
 <script type="text/javascript" src="js/controls.js"></script>
 <!--Classes-->
