--- a/spectralbell/index.html
+++ b/spectralbell/index.html
@@ -13,8 +13,13 @@
 		
     </canvas>
 </body>
-<h1>Controls</h1>
-		<h2>"space" = Launch Ball , "f" = explode , "r" = reset ball</h2>
+<div style="display:none;">
+ <img
+    id="ints"
+    src="images/instructions-screen.png"
+    width="1300"
+    height="800" />
+	</div>
 <!--Controls-->
 <script type="text/javascript" src="js/controls.js"></script>
 <!--Classes-->
